--- a/Gp/index.html
+++ b/Gp/index.html
@@ -42,7 +42,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">SL<span>.</span></a></h1>
+      <h1 class="logo"><a href="index.html">SamsLED'S<span></span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -55,14 +55,7 @@
           <li><a href="#team">Team</a></li>
           <li class="drop-down"><a href="">Drop Down</a>
             <ul>
-                  <li><a href="#">RED</a></li>
-                  <li><a href="#">BLUE</a></li>
-                  <li><a href="#">GREEN</a></li>
-                  <li><a href="#">YELLOw</a></li>
-                  <li><a href="#">PURPLES</a></li>
-                  <li><a href="#">BLACK</a></li>
-                  <li><a href="#">PINK</a></li>
-                  <li><a href="#">WHITE</a></li>
+                  <li><a href="#">SOLID</a></li>
                   <li><a href="#">MULTI-COLOR</a></li>
               </li>
             </ul>
@@ -83,7 +76,7 @@
 
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
-          <h1>Powerful LED'S For A Powerful Need<span>.</span></h1>
+          <h1>Powerful LED'S For A Powerful Need<span></span></h1>
         </div>
       </div>
 
@@ -91,7 +84,8 @@
         <div class="col-xl-2 col-md-4 col-6">
           <div class="icon-box">
             <i class="ri-store-line"></i>
-            <h3><a href="">Shop</a></h3>
+            <h3><a href="store.html">Store</a></h3>
+
           </div>
         </div>
         <div class="col-xl-2 col-md-4 col-6 ">
@@ -218,7 +212,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
               <h4><a href="">Local</a></h4>
-              <p>Here at Sams LED'S we are a local business. Show us pcs around the neighborhood!</p>
+              <p>Here at Sams LED'S we are a local business. Show us pics around the neighborhood!</p>
             </div>
           </div>
 
