--- a/Gp/cart.html
+++ b/Gp/cart.html
@@ -119,7 +119,7 @@
              </td>
            </tr>
         </table>
-        <input type="submit" id="buttonAdd" value="Checkout" />
+        <input type="submit" id="buttonAdd" value="Checkout" href="checkout.html"/>
 
       </form>
    </section>
