--- a/Gp/index.html
+++ b/Gp/index.html
@@ -55,8 +55,8 @@
           <li><a href="#team">Team</a></li>
           <li class="drop-down"><a href="">Drop Down</a>
             <ul>
-                  <li><a href="#">SOLID</a></li>
-                  <li><a href="#">MULTI-COLOR</a></li>
+                  <li><a href="store.html">SOLID</a></li>
+                  <li><a href="store.html">MULTI-COLOR</a></li>
               </li>
             </ul>
           </li>
@@ -86,30 +86,6 @@
             <i class="ri-store-line"></i>
             <h3><a href="store.html">Store</a></h3>
 
-          </div>
-        </div>
-        <div class="col-xl-2 col-md-4 col-6 ">
-          <div class="icon-box">
-            <i class="ri-bar-chart-box-line"></i>
-            <h3><a href="">Progress</a></h3>
-          </div>
-        </div>
-        <div class="col-xl-2 col-md-4 col-6 mt-4 mt-md-0">
-          <div class="icon-box">
-            <i class="ri-calendar-todo-line"></i>
-            <h3><a href="">Special Events</a></h3>
-          </div>
-        </div>
-        <div class="col-xl-2 col-md-4 col-6 mt-4 mt-xl-0">
-          <div class="icon-box">
-            <i class="ri-paint-brush-line"></i>
-            <h3><a href="">Colors</a></h3>
-          </div>
-        </div>
-        <div class="col-xl-2 col-md-4 col-6 mt-4 mt-xl-0">
-          <div class="icon-box">
-            <i class="ri-database-2-line"></i>
-            <h3><a href="">Company</a></h3>
           </div>
         </div>
       </div>
