--- a/Gp/store.html
+++ b/Gp/store.html
@@ -95,94 +95,101 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app" id="photo1" onclick="addImagetoNextPage()">
             <div class="portfolio-wrap">
-              <img src="alled.jpg" class="img-fluid" alt="">
+              <img src="cartimg/alled.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Long LEDS</h4>
                 <p>12-foot strip</p>
+                <p>Price :12</p>
                 <div class="portfolio-links">
-                  <a href="alled.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                  <a href="cartimg/alled.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
                   <a href="cart.html" title="Add to Cart"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web" id="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web" id="Product 1">
             <div class="portfolio-wrap">
-              <img src="bled.jpg" class="img-fluid" alt="">
+              <img src="cartimg/bled.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Short LED strip</h4>
                 <p>6-feet</p>
+                <p>Price :14</p>
                 <div class="portfolio-links">
-                  <a href="bled.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="cartimg/bled.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
                   <a href="cart.html" title="Add to Cart"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app" id="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app" id="Product 2">
             <div class="portfolio-wrap">
-              <img src="homeled.jpg" class="img-fluid" alt="">
+              <img src="cartimg/homeled.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Wall strip</h4>
                 <p>Set</p>
+                <p>Price :12</p>
                 <div class="portfolio-links">
-                  <a href="homeled.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
+                  <a href="cartimg/homeled.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
                   <a href="cart.html" title="Add to Cart"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card" id="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card" id="Product 3">
             <div class="portfolio-wrap">
-              <img src="purled.png" class="img-fluid" alt="">
+              <img src="cartimg/purled.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>36-foot strip</h4>
                 <p>Long strip</p>
+                <p>Price :16</p>
                 <div class="portfolio-links">
-                  <a href="purled.png" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
+                  <a href="cartimg/purled.png" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
                   <a href="cart.html" title="Add to Cart"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web" id="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web" id="Product 4">
             <div class="portfolio-wrap">
-              <img src="roomled.jpg" class="img-fluid" alt="">
+              <img src="cartimg/roomled.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Room Strip</h4>
                 <p>Set</p>
+                <p>Price :20</p>
                 <div class="portfolio-links">
-                  <a href="roomled.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
+                  <a href="cartimg/roomled.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
                   <a href="cart.html" title="Add to Cart"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app" id="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app" id="Product 5">
             <div class="portfolio-wrap">
-              <img src="wavyled.jpg" class="img-fluid" alt="">
+              <img src="cartimg/wavyled.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Advanced LED</h4>
                 <p>Futuristic</p>
+                <p>Price :25</p>
                 <div class="portfolio-links">
-                  <a href="wavyled.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
+                  <a href="cartimg/wavyled.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
                   <a href="cart.html" title="Add to Cart"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card" id="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card" id="Product 6">
             <div class="portfolio-wrap">
               <img src="wled.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Long LEDS</h4>
                 <p>12-foot strip</p>
+                <p>Price :20</p>
                 <div class="portfolio-links">
                   <a href="wled.jpeg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
                   <a href="cart.html" title="Add to Cart"><i class="bx bx-link"></i></a>
@@ -191,28 +198,30 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card" id="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card" id="Product 7">
             <div class="portfolio-wrap">
-              <img src="srled.jpg" class="img-fluid" alt="">
+              <img src="cartimg/srled.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Bubble LED'S</h4>
                 <p>Set</p>
+                <p>Price :12</p>
                 <div class="portfolio-links">
-                  <a href="srled.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
+                  <a href="cartimg/srled.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
                   <a href="cart.html" title="Add to Cart"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web" id="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web" id="Product 8">
             <div class="portfolio-wrap">
-              <img src="sryled.webp" class="img-fluid" alt="">
+              <img src="cartimg/sryled.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Short Strips</h4>
                 <p>Set</p>
+                <p>Price :10</p>
                 <div class="portfolio-links">
-                  <a href="sryled.webp" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="cartimg/sryled.webp" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
                   <a href="cart.html" title="Add to Cart"><i class="bx bx-link"></i></a>
                 </div>
               </div>
