added mision and vision

--- a/Gp/index.html
+++ b/Gp/index.html
@@ -242,11 +242,10 @@
       <div class="container" data-aos="zoom-in">
 
         <div class="text-center">
-          <h3>Call To Action</h3>
-          <p>When we started this busniess, we started because we saw an issue and wanted to fix it. We havent lost sight of that vision. Here at Sams LED'S we kept that vision and 
-            hope to help others with the same need. If there is a problem or a need that you feel you can fix or have any idea that seems to great to pass up,
-            then let us know, so we can help you can change that problem into a solution.
-          </p>
+          <h3>Mission</h3>
+          <p>(to provide service to everyone)</p>
+          <h3>Vision</h3>
+          <p>(to provide LEDS to everyone everywhere)</p>
           <a class="cta-btn" href="#">Call To Action</a>
         </div>
 
