--- a/Gp/store.html
+++ b/Gp/store.html
@@ -95,19 +95,19 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app" id="photo1" onclick="addImagetoNextPage()">
             <div class="portfolio-wrap">
-              <img src="alled.jpg" class="img-fluid" alt="">
+              <img src="alled.jpg" class="img-fluid" alt="leds">
               <div class="portfolio-info">
                 <h4>Long LEDS</h4>
                 <p>12-foot strip</p>
                 <div class="portfolio-links">
-                  <a href="alled.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                  <a href="cartimg/alled.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
                   <a href="cart.html" title="Add to Cart"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web" id="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web" id="photo2" onclick="addImagetoNextPage()">
             <div class="portfolio-wrap">
               <img src="bled.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -121,7 +121,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app" id="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app" id="photo3" onclick="addImagetoNextPage()">
             <div class="portfolio-wrap">
               <img src="homeled.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -135,7 +135,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card" id="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card" id="photo4" onclick="addImagetoNextPage()">
             <div class="portfolio-wrap">
               <img src="purled.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -149,7 +149,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web" id="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web" id="photo5" onclick="addImagetoNextPage()">
             <div class="portfolio-wrap">
               <img src="roomled.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -163,7 +163,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app" id="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app" id="photo6" onclick="addImagetoNextPage()">
             <div class="portfolio-wrap">
               <img src="wavyled.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -177,7 +177,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card" id="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card" id="photo7" onclick="addImagetoNextPage()">
             <div class="portfolio-wrap">
               <img src="wled.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -191,7 +191,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card" id="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card" id="photo8" onclick="addImagetoNextPage()">
             <div class="portfolio-wrap">
               <img src="srled.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -205,7 +205,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web" id="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web" id="photo9" onclick="addImagetoNextPage()">
             <div class="portfolio-wrap">
               <img src="sryled.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
