--- a/Gp/store.html
+++ b/Gp/store.html
@@ -95,11 +95,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app" id="photo1" onclick="addImagetoNextPage()">
             <div class="portfolio-wrap">
-<<<<<<< HEAD
-              <img src="alled.jpg" class="img-fluid" alt="leds">
-=======
-              <img src="cartimg/alled.jpg" class="img-fluid" alt="">
->>>>>>> main
+              <img src="cartimg/alled.jpg" class="img-fluid" alt="leds">
               <div class="portfolio-info">
                 <h4>Long LEDS</h4>
                 <p>12-foot strip</p>
@@ -112,11 +108,7 @@
             </div>
           </div>
 
-<<<<<<< HEAD
           <div class="col-lg-4 col-md-6 portfolio-item filter-web" id="photo2" onclick="addImagetoNextPage()">
-=======
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web" id="Product 1">
->>>>>>> main
             <div class="portfolio-wrap">
               <img src="cartimg/bled.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -131,11 +123,7 @@
             </div>
           </div>
 
-<<<<<<< HEAD
           <div class="col-lg-4 col-md-6 portfolio-item filter-app" id="photo3" onclick="addImagetoNextPage()">
-=======
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app" id="Product 2">
->>>>>>> main
             <div class="portfolio-wrap">
               <img src="cartimg/homeled.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -150,11 +138,7 @@
             </div>
           </div>
 
-<<<<<<< HEAD
           <div class="col-lg-4 col-md-6 portfolio-item filter-card" id="photo4" onclick="addImagetoNextPage()">
-=======
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card" id="Product 3">
->>>>>>> main
             <div class="portfolio-wrap">
               <img src="cartimg/purled.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -169,11 +153,7 @@
             </div>
           </div>
 
-<<<<<<< HEAD
           <div class="col-lg-4 col-md-6 portfolio-item filter-web" id="photo5" onclick="addImagetoNextPage()">
-=======
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web" id="Product 4">
->>>>>>> main
             <div class="portfolio-wrap">
               <img src="cartimg/roomled.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -188,11 +168,7 @@
             </div>
           </div>
 
-<<<<<<< HEAD
           <div class="col-lg-4 col-md-6 portfolio-item filter-app" id="photo6" onclick="addImagetoNextPage()">
-=======
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app" id="Product 5">
->>>>>>> main
             <div class="portfolio-wrap">
               <img src="cartimg/wavyled.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -207,11 +183,7 @@
             </div>
           </div>
 
-<<<<<<< HEAD
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card" id="photo7" onclick="addImagetoNextPage()">
-=======
           <div class="col-lg-4 col-md-6 portfolio-item filter-card" id="Product 6">
->>>>>>> main
             <div class="portfolio-wrap">
               <img src="wled.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -226,11 +198,7 @@
             </div>
           </div>
 
-<<<<<<< HEAD
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card" id="photo8" onclick="addImagetoNextPage()">
-=======
           <div class="col-lg-4 col-md-6 portfolio-item filter-card" id="Product 7">
->>>>>>> main
             <div class="portfolio-wrap">
               <img src="cartimg/srled.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
