--- a/Gp/store.html
+++ b/Gp/store.html
@@ -99,7 +99,7 @@
               <div class="portfolio-info">
                 <h4>Long LEDS</h4>
                 <p>12-foot strip</p>
-                <p>Price :12</p>
+                <p>Price :$12</p>
                 <div class="portfolio-links">
                   <a href="cartimg/alled.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
                   <a href="cart.html" title="Add to Cart"><i class="bx bx-link"></i></a>
@@ -114,7 +114,7 @@
               <div class="portfolio-info">
                 <h4>Short LED strip</h4>
                 <p>6-feet</p>
-                <p>Price :14</p>
+                <p>Price :$14</p>
                 <div class="portfolio-links">
                   <a href="cartimg/bled.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
                   <a href="cart.html" title="Add to Cart"><i class="bx bx-link"></i></a>
@@ -129,7 +129,7 @@
               <div class="portfolio-info">
                 <h4>Wall strip</h4>
                 <p>Set</p>
-                <p>Price :12</p>
+                <p>Price :$12</p>
                 <div class="portfolio-links">
                   <a href="cartimg/homeled.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
                   <a href="cart.html" title="Add to Cart"><i class="bx bx-link"></i></a>
@@ -144,7 +144,7 @@
               <div class="portfolio-info">
                 <h4>36-foot strip</h4>
                 <p>Long strip</p>
-                <p>Price :16</p>
+                <p>Price :$16</p>
                 <div class="portfolio-links">
                   <a href="cartimg/purled.png" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
                   <a href="cart.html" title="Add to Cart"><i class="bx bx-link"></i></a>
@@ -159,7 +159,7 @@
               <div class="portfolio-info">
                 <h4>Room Strip</h4>
                 <p>Set</p>
-                <p>Price :20</p>
+                <p>Price :$20</p>
                 <div class="portfolio-links">
                   <a href="cartimg/roomled.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
                   <a href="cart.html" title="Add to Cart"><i class="bx bx-link"></i></a>
@@ -174,7 +174,7 @@
               <div class="portfolio-info">
                 <h4>Advanced LED</h4>
                 <p>Futuristic</p>
-                <p>Price :25</p>
+                <p>Price :$30</p>
                 <div class="portfolio-links">
                   <a href="cartimg/wavyled.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
                   <a href="cart.html" title="Add to Cart"><i class="bx bx-link"></i></a>
@@ -185,13 +185,13 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card" id="Product 6">
             <div class="portfolio-wrap">
-              <img src="wled.jpeg" class="img-fluid" alt="">
+              <img src="cartimg/wled.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Long LEDS</h4>
                 <p>12-foot strip</p>
-                <p>Price :20</p>
+                <p>Price :$20</p>
                 <div class="portfolio-links">
-                  <a href="wled.jpeg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
+                  <a href="cartimg/wled.jpeg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
                   <a href="cart.html" title="Add to Cart"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -204,7 +204,7 @@
               <div class="portfolio-info">
                 <h4>Bubble LED'S</h4>
                 <p>Set</p>
-                <p>Price :12</p>
+                <p>Price :$12</p>
                 <div class="portfolio-links">
                   <a href="cartimg/srled.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
                   <a href="cart.html" title="Add to Cart"><i class="bx bx-link"></i></a>
@@ -213,17 +213,13 @@
             </div>
           </div>
 
-<<<<<<< HEAD
           <div class="col-lg-4 col-md-6 portfolio-item filter-web" id="photo9" onclick="addImagetoNextPage()">
-=======
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web" id="Product 8">
->>>>>>> main
             <div class="portfolio-wrap">
               <img src="cartimg/sryled.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Short Strips</h4>
                 <p>Set</p>
-                <p>Price :10</p>
+                <p>Price :$10</p>
                 <div class="portfolio-links">
                   <a href="cartimg/sryled.webp" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
                   <a href="cart.html" title="Add to Cart"><i class="bx bx-link"></i></a>
@@ -429,12 +425,12 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Gp<span>.</span></h3>
+              <h3>Sam's LEDS<span>.</span></h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                6997 N Glen Harbor Blvd, Glendale, AZ 85307<br>
+                <br><br>
+                <strong>Phone:</strong> (623) 466-1999<br>
+                <strong>Email:</strong> SamsLEDS@gmail.com<br>
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -470,7 +466,7 @@
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <p>news</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
