--- a/Gp/store.html
+++ b/Gp/store.html
@@ -360,7 +360,7 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>6997 N Glen Harbor Blvd, Glendale, AZ 85307</p>
               </div>
 
               <div class="email">
